--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
 			<li class="nav-item">
 				<a class="nav-link" [routerLink]="['prices']" routerLinkActive="my-activate">Prices</a>
 			</li>
-			<li class="nav-item">
+			<li class="nav-item" *ngIf="auth.isAuthenticated()" >
 				<a class="nav-link" [routerLink]="['protected']" routerLinkActive="my-activate">Protected</a>
 			</li>
 		</ul>
